--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 Данный проект выполнен в рамках тестового задания в компанию Фабрика проектов.
 Использованный стек: Django, DRF (Django Rest Framework), python-telegram-bot
 
+Примечание: чтобы воспользоваться методами REST API можете импортировать схему Postman из этого репозитория
+
 Цель и суть проекта: создать систему для отправки сообщений в Телеграм бота посредством REST API, созданного с помощью Django и Django Rest Framework
 Механика: пользоветель регистрируется в системе -> авторизуется -> генерирует токен для бота -> переходит в бота (https://t.me/alim_the_factory_bot) -> отправляет боту сгенерированный токен -> бот автоматически связывает чат пользователя с его учетной записью в системе -> пользователь отправляет сообщения через REST API и мгновенно получает их в бота
 
